# eval-platform

./: .dockerignore  .env.example  .gitignore  README.md  chromadb-vector-store.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  docker-deploy.md  pyproject.toml
ai-chat/: AGENTS.md  Dockerfile  IMPLEMENTATION-PLAN.md  README.md  benchmark.py  benchmark_results.json  download_paul_graham.py  embedder.py  eval.py  ingest.py  main.py  parser.py  pyproject.toml  rag.py  rag_engine.py  test_app.py  test_benchmark.py  test_embedder.py  test_parser.py  test_rag_engine.py  test_utils.py  test_vector_store.py  utils.py  vector_store.py
ai-chat/benchmark_data/: sample_text.txt  test_cases.json  test_cases_full.json
ai-chat/db/: chroma.sqlite3
ai-chat/docs/: ARCHITECTURE.md  BENCHMARK.md
ai-chat/docs/superpowers/plans/: 2026-06-16-agentic-rag-tool.md  2026-06-23-ai-chat-file-manager.md  2026-06-23-exponential-retry.md
ai-chat/docs/superpowers/specs/: 2026-06-16-agentic-rag-tool-design.md  2026-06-23-ai-chat-file-manager-design.md  2026-06-23-exponential-retry-design.md
ai-chat/engine/: generator.py  main.py  pyproject.toml  retriever.py
ai-chat/ui/: package-lock.json  package.json
ai-chat/ui/app/: layout.tsx  page.tsx
backend/: .gitignore  AGENTS.md  API.md  Dockerfile  GEMINI.md  IMPLEMENTATION-PLAN.md  README.md  implementation_plan.md  pyproject.toml  test_runtimes.py
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: agent.py  configs.py  events.py
backend/app/api/v1/: router.py
backend/app/core/: config.py  exceptions.py
backend/app/core/agents/: __init__.py
backend/app/core/documents/: __init__.py  models.py  ports.py  services.py
backend/app/core/eval_engine/: __init__.py  models.py  ports.py
backend/app/core/kernel/: models.py  ports.py
backend/app/core/shared/: __init__.py  retry.py
backend/app/core/vector_storage/: __init__.py  models.py  ports.py
backend/app/engine/: asserter.py  executor.py  orchestrator.py  resolver.py
backend/app/infra/agents/: metric_helper_agent.py
backend/app/infra/repositories/: json_batch_result_repository.py  json_chat_session_repository.py  json_dataset_repository.py  json_document_repository.py  yaml_metric_repository.py  yaml_pipeline_repository.py  yaml_runtimestate_repository.py
backend/app/infra/services/: __init__.py  agentic_metric_builder.py  ai_judge_service.py
backend/app/infra/vector_storage/: __init__.py  chroma_adapter.py
backend/app/models/: agent.py  config.py  report.py  telemetry.py
backend/app/services/: metric_agent.py  rag_service.py
backend/docs/: API.md
backend/docs/superpowers/plans/: 2026-06-09-llm-retry-policy.md  2026-06-09-robust-claims-list-parsing.md
backend/fixtures/chromadb/: chroma.sqlite3
backend/fixtures/default_metrics/: answer_relevancy_lite.yaml  answer_relevancy_rigorous.yaml  context_recall_lite.yaml  context_recall_rigorous.yaml  context_relevance.yaml  faithfulness_lite.yaml  faithfulness_rigorous.yaml  hallucination_index.yaml  image_caption_quality.yaml  ocr_accuracy.yaml
backend/fixtures/metrics/: 019e74a6-970d-7e54-b5b0-cfb7177f19c8  019e74a6-970d-7e54-b5b0-cfb7177f19c8.yaml  019e74a6-970e-7774-9a90-435e40056f8e.yaml  019e74a6-9710-7c02-87ba-97ca77295ba3.yaml  019e74a6-9712-7cee-b9ca-95922c6e56d3.yaml  019e74a6-9713-7b7d-8083-14febed7463d  019e74a6-9714-7348-9b28-e91f5872c4bf  019e74a6-9715-7801-ab8c-f2d54a871a3d.yaml  019e74a6-9716-7bdd-ae91-52ba6570a506.yaml  019e74a6-9717-7da6-89fb-8815bb9c519a  019e74a6-9718-7822-8649-4a9d92cf341c.yaml  0fecc8ef-4c39-4f67-80eb-18025b02f531.yaml  1f5f16b0-391e-4cba-a0f0-f5fcf13e396b.yaml  3b170ecc-6436-4da2-86e3-1f0af42c7fce.yaml  5f5727a3-1b97-44fd-bd8b-6583883ae7d0.yaml  a1281495-62c3-4d9b-9224-89af5864f621.yaml  f7a21f81-9e30-429d-aa31-b20098412977.yaml  faithfulness_score.yaml  hallucination_judge.yaml  latency_seconds.yaml  ocr_process_time_ms.yaml  output_sentiment_score.yaml  pdf_process_time_ms.yaml  structural_integrity_judge.yaml
backend/fixtures/pipelines/: 019e74a6-971a-7b3f-b88a-39c2834b67cd.yaml  customer_support_rag_eval.yaml  rag_pipeline.yaml
backend/fixtures/sessions/: faithfulness_score.json  retrieval_relevance_judge.json
backend/fixtures/uploads/: art-1780036000864.json  art-1780246873706.json
backend/tests/: conftest.py  test_agent_sessions.py  test_asserter.py  test_events.py  test_executor.py  test_metric_agent.py  test_orchestrator.py  test_playground.py  test_resolver.py
backend/tests/core/: test_orchestrator_queues.py
sdk/: AGENTS.md  API.md  EVENTS.md  IMPLEMENTATION-PLAN.md  README.md  pyproject.toml
sdk/src/evalplatform_sdk/: __init__.py  client.py  helpers.py  management.py  models.py
sdk/tests/: test_client.py  test_helpers.py  test_management_client.py  test_models.py
(+149 files in other folders)
