[project]
name = "eval-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "cafesuada", email = "108068915+cafesuada24@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "uuid6>=2025.0.1",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
# Apply these ignores only to files in the tests directory
"**/test_*.py" = [
    "S101",    # Use of assert is mandatory in tests
    "ARG001",  # Unused function arguments (fixtures)
    "FBT001",  # Boolean positional arguments in parametrization
    "D",       # Ignore missing docstrings in tests
    "ANN",     # Ignore type annotations in tests
    "PLR2004", # Ignore magic values in tests
    "E402",    # Allow late imports for testing hacks
]

[tool.ruff.format]
# 5. Use single quotes in `ruff format`.
quote-style = "single"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 72

[tool.ruff.lint]
# select = [
#     "ALL",
# ]
select = [
    "F",      # pyflakes (runtime errors, unused imports/variables)
    "E", "W", # pycodestyle (style and whitespace)
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade (modernize syntax)
    "B",      # flake8-bugbear (common bugs & best practices)
    "SIM",    # flake8-simplify (code simplification)
    "C4",     # flake8-comprehensions (list/set/dict comprehension help)
    "TC",     # flake8-type-checking (move typing imports to `if TYPE_CHECKING`)
    "PL",     # flake8-unused-arguments
    "RET",    # flake8-return (return statement issues)
    "ARG",    # pylint rules (a subset)
    "ANN",    # type annotations enforcement
    "COM",    # flake8-commas
    "C90",    # maccabe complexity
    "D",      # pydocstyle
    "A",      # flake8-builtins

    # "YTT",
    # "DTZ",
    # "ISC",
    # "ICN",
    # "INP",
    # "PIE",
    # "PT",
    # "TID",
    # "PLC",
    # "PLE",
    # "PLR",
    # "PLW",
    # "RUF",
    # "PYI",
]

ignore = [
    'Q000',   # Double quote
    'ERA001', # Code comment
    'E501',   # line too long
    'F841',   # pyright already supports this
    'F401',   
]

fixable = ['ALL']
unfixable = []
extend-select = ['PT']

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings.
convention = "google"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "test_parser",
    "test_embedder",
    "test_vector_store",
    "test_rag_engine",
    "test_app",
]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv.workspace]
members = [
    "backend",
    "sdk",
    "ai-chat/engine",
    "ai-chat",
]
