[project]
name = "engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "evalplatform-sdk",
    "fastapi>=0.136.3",
    "google-genai>=2.6.0",
    "langchain>=1.3.2",
    "pypdf>=6.12.2",
    "uvicorn>=0.48.0",
]

[tool.uv.sources]
evalplatform-sdk = { workspace = true, editable = true }
